# velociraptor-python

./: .gitignore  README.md  format.sh  mnras.mplstyle  pyproject.toml  requirements.txt  setup.py  velociraptor-compute-box-size-correction  velociraptor-plot
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/auto_plotter/: index.rst
docs/source/basic_usage/: index.rst
docs/source/installation/: index.rst
docs/source/modules/: .gitignore  index.rst
docs/source/observational_data/: creating_data.rst  (+3 more)
examples/: auto_plotter.py  auto_plotter_example.yml  create_galaxy_sizes.py  create_hmf.py  create_moster.py  create_smf.py  create_stellar_ages.py  example_registration.py  swift_integration.py  swift_integration_movie.py
tests/: auto_plotter_test_file.yml  test_load_catalogue.py  test_observational_data.py
velociraptor/: __init__.py  catalogue.py  exceptions.py  objects.py  registration.py  translator.py  units.py  velociraptor_compute_box_size_correction.py
velociraptor/autoplotter/: __init__.py  box_size_correction.py  compare.py  lines.py  metadata.py  objects.py  plot.py
velociraptor/catalogue/: catalogue.py  derived.py  reader.py  registration.py  soap_catalogue.py  translator.py  velociraptor_catalogue.py
velociraptor/fitting_formulae/: smhmr.py
velociraptor/observations/: __init__.py  objects.py
velociraptor/particles/: __init__.py  particles.py
velociraptor/swift/: swift.py
velociraptor/tools/: __init__.py  adaptive.py  histogram.py  labels.py  lines.py  mass_functions.py
(+2 files in other folders)
