[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["velociraptor"]

[project]
name = "velociraptor-python"
version="0.16.1"
authors = [
    { name="Josh Borrow", email="josh@joshborrow.com" },
    { name="Kyle Oman", email="kyle.a.oman@durham.ac.uk" },
]
description="Velociraptor catalogue reading routines."
readme = "README.md"
requires-python = ">3.6.0"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "h5py",
    "unyt>=2.6.0",
    "astropy",
]

[project.urls]
"Homepage" = "https://github.com/SWIFTSIM/velociraptor-python"
"Bug Tracker" = "https://github.com/SWIFTSIM/velociraptor-python/issues"
"Documentation" = "https://velociraptor-python.readthedocs.io/en/latest"

[project.scripts]
velociraptor-plot = "velociraptor.velociraptor_plot:velociraptor_plot"
velociraptor-compute-box-size-correction = "velociraptor.velociraptor_compute_box_size_correction:velociraptor_compute_box_size_correction"